# oop-lab-2

./: CMakeLists.txt  README.md
include/: five.hpp
src/: five.cpp  main.cpp
test/: test01.cpp
